--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "splaytree",
-  "version": "0.1.4",
+  "version": "2.0.0",
   "author": "Alexander Milevski <info@w8r.name>",
   "license": "MIT",
   "description": "Fast Splay tree for Node and browser",
@@ -27,28 +27,25 @@
     "benchmark": "node bench/benchmark.js",
     "start": "npm run test:watch",
     "test:watch": "nodemon --watch src --watch tests --exec 'npm test'",
-    "test": "mocha build/tests-bundle.js && npm run types",
-    "prepublish": "npm run build && npm test"
+    "test": "mocha build/tests-bundle.js",
+    "prepublishOnly": "npm run build && npm test"
   },
   "devDependencies": {
-    "avl": "^1.4.0",
+    "@types/node": "^8.0.0",
+    "avl": "^1.4.3",
     "benchmark": "^2.1.4",
-    "bintrees": "^1.0.1",
-    "chai": "^4.1.0",
-    "eslint": "^4.2.0",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.7.0",
-    "functional-red-black-tree": "^1.0.1",
-    "google-closure-library": "^20170626.0.0",
-    "mocha": "^3.4.2",
-    "nodemon": "^1.11.0",
-    "rollup": "^0.45.2",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-multi-entry": "^2.0.1",
-    "rollup-watch": "^4.3.1",
-    "source-map-support": "^0.4.15",
-    "tern": "^0.21.0",
-    "typescript": "^2.4.2"
+    "bintrees": "^1.0.2",
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "mocha": "^5.1.1",
+    "nodemon": "^1.17.4",
+    "rollup": "^0.58.2",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-multi-entry": "^2.0.2",
+    "source-map-support": "^0.5.5",
+    "typescript": "^2.8.3"
   },
   "keywords": [
     "binary-tree",
