--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/w8r/splay.git"
+    "url": "https://github.com/w8r/splay-tree.git"
   },
   "scripts": {
     "prebuild": "npm run lint",
