--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "splaytree",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "author": "Alexander Milevski <info@w8r.name>",
   "license": "MIT",
   "description": "Fast Splay tree for Node and browser",
@@ -20,32 +20,29 @@
   "scripts": {
     "prebuild": "npm run lint",
     "lint": "eslint index.js",
-    "build": "rollup -c build/rollup.config.umd.js && rollup -c build/rollup.config.es6.js && npm run types",
+    "build": "rollup -c && npm run types",
     "types": "tsc index.d.ts tests/types.ts",
-    "pretest": "rollup -c build/rollup.config.tests.js",
     "prebenchmark": "npm run build",
-    "benchmark": "node bench/benchmark.js",
+    "benchmark": "node -r reify bench/benchmark.js",
     "start": "npm run test:watch",
-    "test:watch": "nodemon --watch src --watch tests --exec 'npm test'",
-    "test": "mocha build/tests-bundle.js",
+    "test:watch": "nodemon --watch index.js --watch tests --exec 'npm test'",
+    "test": "mocha -r reify tests/**/*.test.js",
     "prepublishOnly": "npm run build && npm test"
   },
   "devDependencies": {
-    "@types/node": "^8.0.0",
-    "avl": "^1.4.3",
+    "avl": "^1.4.4",
     "benchmark": "^2.1.4",
     "bintrees": "^1.0.2",
     "chai": "^4.1.2",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "mocha": "^5.1.1",
-    "nodemon": "^1.17.4",
-    "rollup": "^0.58.2",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.4",
+    "reify": "^0.17.3",
+    "rollup": "^0.65.2",
     "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-multi-entry": "^2.0.2",
-    "source-map-support": "^0.5.5",
-    "typescript": "^2.8.3"
+    "typescript": "^3.0.3"
   },
   "keywords": [
     "binary-tree",
