--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "benchmark": "node -r reify bench/benchmark.js",
     "start": "npm run test:watch",
     "test:watch": "nodemon --watch index.js --watch tests --exec 'npm test'",
-    "test": "mocha -r ts-node/register tests/**/*.test.ts",
+    "test": "mocha tests/**/*.test.ts",
     "prepublishOnly": "npm run build && npm test",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "cover": "nyc mocha tests/**.*.ts"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.2",
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2",
     "nodemon": "^1.17.5",
     "nyc": "^13.3.0",
     "reify": "*",
@@ -53,5 +54,30 @@
     "splay",
     "balanced-search-tree"
   ],
+  "mocha": {
+    "require": [
+      "ts-node/register"
+    ]
+  },
+  "nyc": {
+    "include": [
+      "src/*.ts"
+    ],
+    "exclude": [
+      "tests/**/*.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "sourceMap": true,
+    "instrument": true
+  },
   "dependencies": {}
 }
