--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - "10"
-
+scripts:
+  - npm install codecov -g
 install:
   - npm install
+after_success:
+  - codecov
