--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "npm run test:watch",
     "test:watch": "nodemon --watch index.js --watch tests --exec 'npm test'",
     "test": "mocha tests/**/*.test.ts",
-    "posttest": "nyc report --reporter=json",
+    "posttest": "npm run cover && nyc report --reporter=json",
     "prepublishOnly": "npm run build && npm test",
     "clean": "rm -rf dist",
     "cover": "nyc mocha tests/**.*.ts"
