--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "splaytree",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "author": "Alexander Milevski <info@w8r.name>",
   "license": "MIT",
   "description": "Fast Splay tree for Node and browser",
@@ -27,15 +27,17 @@
     "benchmark": "node -r reify bench/benchmark.js",
     "start": "npm run test:watch",
     "test:watch": "nodemon --watch index.js --watch tests --exec 'npm test'",
-    "test": "mocha tests/**/*.test.ts",
-    "posttest": "npm run cover && nyc report --reporter=json",
+    "test": "nyc mocha tests/**/*.test.ts",
+    "posttest": "nyc report --reporter=json",
     "prepublishOnly": "npm run build && npm test",
-    "clean": "rm -rf dist",
-    "cover": "nyc mocha tests/**.*.ts"
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.2",
+    "avl": "^1.4.4",
+    "benchmark": "^2.1.4",
+    "bintrees": "^1.0.2",
     "chai": "^4.2.0",
     "mocha": "^6.0.2",
     "nodemon": "^1.17.5",
