--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "importHelpers": true,
     "lib": ["es5", "es6", "dom"],
     "target": "es5",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "downlevelIteration": true
   },
   "target": "ESNext",
   "module": "ES6",
