--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "benchmark": "^2.1.4",
     "bintrees": "^1.0.2",
     "chai": "^4.2.0",
+    "codecov": "^3.8.3",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.2",
     "nyc": "^14.1.1",
