--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test": "nyc mocha tests/**/*.test.ts",
     "posttest": "nyc report --reporter=json",
     "prepublishOnly": "npm run build && npm test",
-    "clean": "rm -rf dist coverage .nyc"
+    "clean": "rm -rf dist coverage .nyc",
+    "coverage": "codecov -f coverage/*.json"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
