--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,13 @@
 {
   "compilerOptions": {
-    "noImplicitAny": true,
-    "declaration": false,
-    "declarationDir": "./typings/",
-    "noImplicitThis": true,
-    "noEmitOnError": true,
-    "importHelpers": true,
-    "lib": ["es5", "es6", "dom"],
-    "target": "es5",
+    "target": "ES2020",
+    "module": "ESNext",
     "moduleResolution": "node",
-    "downlevelIteration": true
+    "lib": ["ES2020", "DOM"],
+    "strict": true,
+    "noEmit": true,
+    "skipLibCheck": true
   },
-  "target": "ESNext",
-  "module": "ES6",
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
