--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Node.js CI
 
 on:
@@ -15,17 +12,25 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 14.x]
+        node-version: [20.x, 22.x]
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: codecov/codecov-action@v2
+      - uses: actions/checkout@v4
+
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
           node-version: ${{ matrix.node-version }}
+          cache: "npm"
+
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
       - run: npm run coverage
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./coverage/coverage-final.json
+          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
